--- a/index.html
+++ b/index.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | Tip calculator app</title>
-</head>
-<body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <p class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-    <a href="https://github.com/RaynaFaye">Serena Lombardo</a>.
-  </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Frontend Mentor | Tip calculator app</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="images/logo.svg" alt="Splitter" />
+      </div>
+    </header>
+    <section>
+      <div>
+        <label for="bill">Bill</label>
+        <div>
+          <span><img src="images/icon-dollar.svg" alt="" /></span>
+          <input type="number" name="bill" id="bill" />
+        </div>
+      </div>
+      <div>
+        <p>Select Tip %</p>
+        <div>
+          <label for="tip5">5%</label>
+          <input type="radio" id="tip5" name="tip" value="5%" />
+        </div>
+        <div>
+          <label for="tip10">10%</label>
+          <input type="radio" id="tip10" name="tip" value="10%" />
+        </div>
+        <div>
+          <label for="tip15">15%</label>
+          <input type="radio" id="tip15" name="tip" value="15%" />
+        </div>
+        <div>
+          <label for="tip25">25%</label>
+          <input type="radio" id="tip25" name="tip" value="25%" />
+        </div>
+        <div>
+          <label for="tip50">50%</label>
+          <input type="radio" id="tip50" name="tip" value="50%" />
+        </div>
+        <div>
+          <label for="tipcustom">Custom</label>
+          <input type="text" id="tipcustom" name="tipcustom" placeholder="Custom" />
+        </div>
+      </div>
+      <div>
+        <label for="people">Number of People</label>
+        <div>
+          <span><img src="images/icon-person.svg" alt="" /></span>
+          <input type="number" name="people" id="people" />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <p>Tip Amount <span>/ person</span></p>
+        <p>$<span>0.00</span></p>
+      </div>
+      <div>
+        <p>Total <span>/ person</span></p>
+        <p>$<span>0.00</span></p>
+      </div>
+      <button>Reset</button>
+    </section>
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+      <a href="https://github.com/RaynaFaye">Serena Lombardo</a>.
+    </footer>
+  </body>
 </html>
