--- a/index.html
+++ b/index.html
@@ -15,52 +15,54 @@
       </div>
     </header>
     <main class="main">
-      <section>
+      <section class="calculator">
         <form action="">
-          <div>
+          <div class="calculator__bill-section">
             <label for="bill">Bill</label>
-            <div>
-              <span><img src="images/icon-dollar.svg" alt="" /></span>
-              <input type="number" name="bill" id="bill" />
+            <div class="calculator__input-block">
+              <span class="calculator__input-icon-block"><img src="images/icon-dollar.svg" alt="" /></span>
+              <input type="text" name="bill" id="bill" class="calculator__input bob" />
             </div>
           </div>
-          <fieldset>
-            <legend>Select Tip %</legend>
-            <div>
-              <label for="tip5">5%</label>
-              <input type="radio" id="tip5" name="tip" value="5%" />
-            </div>
-            <div>
-              <label for="tip10">10%</label>
-              <input type="radio" id="tip10" name="tip" value="10%" />
-            </div>
-            <div>
-              <label for="tip15">15%</label>
-              <input type="radio" id="tip15" name="tip" value="15%" />
-            </div>
-            <div>
-              <label for="tip25">25%</label>
-              <input type="radio" id="tip25" name="tip" value="25%" />
-            </div>
-            <div>
-              <label for="tip50">50%</label>
-              <input type="radio" id="tip50" name="tip" value="50%" />
-            </div>
-            <div>
-              <label for="tipcustom">Custom</label>
-              <input type="text" id="tipcustom" name="tipcustom" placeholder="Custom" />
+          <fieldset class="calcultor__tip">
+            <legend class="calcultor__tip__title">Select Tip %</legend>
+            <div class="calcultor__tip__buttons">
+              <div class="calcultor__tip__button">
+                <label for="tip5" class="calcultor__tip__button__label">5%</label>
+                <input type="radio" id="tip5" name="tip" value="5%" />
+              </div>
+              <div class="calcultor__tip__button">
+                <label for="tip10" class="calcultor__tip__button__label">10%</label>
+                <input type="radio" id="tip10" name="tip" value="10%" />
+              </div>
+              <div class="calcultor__tip__button">
+                <label for="tip15" class="calcultor__tip__button__label">15%</label>
+                <input type="radio" id="tip15" name="tip" value="15%" />
+              </div>
+              <div class="calcultor__tip__button">
+                <label for="tip25" class="calcultor__tip__button__label">25%</label>
+                <input type="radio" id="tip25" name="tip" value="25%" />
+              </div>
+              <div class="calcultor__tip__button">
+                <label for="tip50" class="calcultor__tip__button__label">50%</label>
+                <input type="radio" id="tip50" name="tip" value="50%" />
+              </div>
+              <div class="calcultor__tip__button">
+                <label for="tipcustom" class="calcultor__tip__button__label custom__label">Custom</label>
+                <input type="text" id="tipcustom" name="tipcustom" placeholder="Custom" class="custom__input" />
+              </div>
             </div>
           </fieldset>
-          <div>
+          <div class="calculator__people-section">
             <label for="people">Number of People</label>
-            <div>
-              <span><img src="images/icon-person.svg" alt="" /></span>
-              <input type="number" name="people" id="people" />
+            <div class="calculator__input-block">
+              <span class="calculator__input-icon-block"><img src="images/icon-person.svg" alt="" /></span>
+              <input type="text" name="people" id="people" class="calculator__input" />
             </div>
           </div>
         </form>
       </section>
-      <section>
+      <section class="results">
         <div>
           <p>Tip Amount <span>/ person</span></p>
           <p>$<span>0.00</span></p>
@@ -76,5 +78,6 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="https://github.com/RaynaFaye">Serena Lombardo</a>.
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
