Styled the results block

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
         </form>
       </section>
       <section class="results">
-        <div>
-          <p>Tip Amount <span>/ person</span></p>
-          <p>$<span>0.00</span></p>
+        <div class="results__block">
+          <p class="results__sentence">Tip Amount <span class="results__sentence__per-person">/ person</span></p>
+          <p class="results__number">$<span>0.00</span></p>
         </div>
-        <div>
-          <p>Total <span>/ person</span></p>
-          <p>$<span>0.00</span></p>
+        <div class="results__block">
+          <p class="results__sentence">Total <span class="results__sentence__per-person">/ person</span></p>
+          <p class="results__number">$<span>0.00</span></p>
         </div>
-        <button>Reset</button>
+        <button class="results__button">Reset</button>
       </section>
     </main>
     <footer class="attribution">
