--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
             <div class="calcultor__tip__buttons">
               <div class="calcultor__tip__button">
                 <label for="tip5" class="calcultor__tip__button__label">5%</label>
-                <input type="radio" id="tip5" name="tip" value="5%" />
+                <input type="radio" id="tip5" name="tip" value="5%" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip10" class="calcultor__tip__button__label">10%</label>
-                <input type="radio" id="tip10" name="tip" value="10%" />
+                <input type="radio" id="tip10" name="tip" value="10%" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip15" class="calcultor__tip__button__label">15%</label>
-                <input type="radio" id="tip15" name="tip" value="15%" />
+                <input type="radio" id="tip15" name="tip" value="15%" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip25" class="calcultor__tip__button__label">25%</label>
-                <input type="radio" id="tip25" name="tip" value="25%" />
+                <input type="radio" id="tip25" name="tip" value="25%" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip50" class="calcultor__tip__button__label">50%</label>
-                <input type="radio" id="tip50" name="tip" value="50%" />
+                <input type="radio" id="tip50" name="tip" value="50%" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tipcustom" class="calcultor__tip__button__label custom__label">Custom</label>
@@ -71,7 +71,7 @@
           <p class="results__sentence">Total <span class="results__sentence__per-person">/ person</span></p>
           <p class="results__number">$<span>0.00</span></p>
         </div>
-        <button class="results__button">Reset</button>
+        <button class="results__button" disabled>Reset</button>
       </section>
     </main>
     <footer class="attribution">
