JS code to get the tip value from buttons or custom

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </header>
     <main class="main">
       <section class="calculator">
-        <form action="">
+        <form action="" class="calculator__form">
           <div class="calculator__bill-section">
             <label for="bill">Bill</label>
             <div class="calculator__input-block">
               <span class="calculator__input-icon-block"><img src="images/icon-dollar.svg" alt="" /></span>
-              <input type="text" name="bill" id="bill" class="calculator__input bob" />
+              <input type="text" name="bill" id="bill" class="calculator__input" />
             </div>
           </div>
           <fieldset class="calcultor__tip">
@@ -29,23 +29,23 @@
             <div class="calcultor__tip__buttons">
               <div class="calcultor__tip__button">
                 <label for="tip5" class="calcultor__tip__button__label">5%</label>
-                <input type="radio" id="tip5" name="tip" value="5%" class="calcultor__tip__button__input" />
+                <input type="radio" id="tip5" name="tip" value="5" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip10" class="calcultor__tip__button__label">10%</label>
-                <input type="radio" id="tip10" name="tip" value="10%" class="calcultor__tip__button__input" />
+                <input type="radio" id="tip10" name="tip" value="10" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip15" class="calcultor__tip__button__label">15%</label>
-                <input type="radio" id="tip15" name="tip" value="15%" class="calcultor__tip__button__input" />
+                <input type="radio" id="tip15" name="tip" value="15" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip25" class="calcultor__tip__button__label">25%</label>
-                <input type="radio" id="tip25" name="tip" value="25%" class="calcultor__tip__button__input" />
+                <input type="radio" id="tip25" name="tip" value="25" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tip50" class="calcultor__tip__button__label">50%</label>
-                <input type="radio" id="tip50" name="tip" value="50%" class="calcultor__tip__button__input" />
+                <input type="radio" id="tip50" name="tip" value="50" class="calcultor__tip__button__input" />
               </div>
               <div class="calcultor__tip__button">
                 <label for="tipcustom" class="calcultor__tip__button__label custom__label">Custom</label>
