calculate the tip amount and total per person added

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       <section class="results">
         <div class="results__block">
           <p class="results__sentence">Tip Amount <span class="results__sentence__per-person">/ person</span></p>
-          <p class="results__number">$<span>0.00</span></p>
+          <p class="results__number">$<span class="results__number__tip-value">0.00</span></p>
         </div>
         <div class="results__block">
           <p class="results__sentence">Total <span class="results__sentence__per-person">/ person</span></p>
-          <p class="results__number">$<span>0.00</span></p>
+          <p class="results__number">$<span class="results__number__total-value">0.00</span></p>
         </div>
         <button class="results__button" disabled>Reset</button>
       </section>
